# advent_of_code

./: Cargo.toml  README.md  map_vs_manual.md
.cargo/: config.toml
src/: array.rs  error.rs  gpu.rs  lib.rs  main.rs  parser.rs  utils.rs
src/shaders/: blit.wgsl  cs_2015_3.wgsl  test.wgsl
src/template/: day01.rs  day02.rs  day03.rs  day04.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/year_2015/: day01.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day_1.rs  day_2.rs  day_3.rs
src/year_2022/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day_0.rs  day_2.rs
