[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = "0.8.0"
rayon = "1.6.0"
pollster = "0.2.5"
wgpu = "0.14.0"
presser = "0.3.1"
tokio = { version = "1.22.0", features = ["sync", "rt", "rt-multi-thread"] }
winit = "0.27.5"
color-eyre = "0.6.2"
md5 = "0.7.0"
